<package>

  <name>freenect_stack</name>
  <version>0.4.2</version>
  <description>
    A libfreenect-based ROS driver for the Microsoft Kinect
  </description>

  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <author>Piyush Khandelwal</author>
  <license>BSD</license>  

  <url type="website">http://ros.org/wiki/freenect_stack</url>
  <url type="repository">https://github.com/ros-drivers/freenect_stack.git</url>
  <url type="bugtracker">https://github.com/ros-drivers/freenect_stack/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>freenect_camera</run_depend>
  <run_depend>freenect_launch</run_depend>

</package>
