<package>
  <name>openni_camera</name>
  <version>1.11.1</version>
    <description>
    A ROS driver for OpenNI depth (+ RGB) cameras. These include: 
       Microsoft Kinect,
       PrimeSense PSDK,
       ASUS Xtion Pro and Pro Live

    The driver publishes raw depth, RGB, and IR image streams.
  </description>
  <author>Patrick Mihelich</author>
  <author>Suat Gedikli</author>
  <author>Radu Bogdan Rusu</author>
  <maintainer email="130s@2000.jukuin.keio.ac.jp">Isaac I.Y. Saito</maintainer>
  <license>BSD</license>
  
  <url type="website">http://www.ros.org/wiki/openni_camera</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>camera_info_manager</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>log4cxx</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>libopenni-dev</build_depend>

  <run_depend>camera_info_manager</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>log4cxx</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <run_depend>libusb-1.0-dev</run_depend>
  <run_depend>libopenni-dev</run_depend>

  <export>
    <nodelet plugin="${prefix}/openni_nodelets.xml"/>
  </export>

</package>
