<package>
  <name>openni_launch</name>
  <version>1.11.1</version>
    <description>
     Launch files to open an OpenNI device and load all nodelets to 
     convert raw depth/RGB/IR streams to depth images, disparity images, 
     and (registered) point clouds.
    </description>
  <author>Patrick Mihelich</author>
  <maintainer email="130s@2000.jukuin.keio.ac.jp">Isaac I.Y. Saito</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/openni_launch</url>
  <url type="repository">https://github.com/ros-drivers/openni_camera</url>
  <url type="bugtracker">https://github.com/ros-drivers/openni_camera/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- test dependency -->
  <build_depend>roslaunch</build_depend> 

  <run_depend>nodelet</run_depend>
  <run_depend>openni_camera</run_depend>
  <run_depend>rgbd_launch</run_depend>

</package>
